Fixed relative spacing issue of ArchI
Addressed spacing issue with ArchI being moved too much to one side of screen when resized.

--- a/src/pages/SignupPage.module.css
+++ b/src/pages/SignupPage.module.css
@@ -232,7 +232,7 @@
   
   .characterContainer {
     margin-top: 220px;
-    margin-left: 760px;
+    margin-left: calc(61vw);
     position: absolute;
     width: calc(100% - 540px);
     min-width: 412px;
